# homebrew-claude-boop

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: claude-boop.rb
src/: main.rs
