[package]
name = "claude-boop"
version = "0.1.0"
edition = "2021"
description = "Plays a cute notification when Claude Code needs your attention"
license = "MIT"
repository = "https://github.com/akeenkarkare/claude-boop"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
dirs = "5.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
